--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "glob": "^7.1.2",
     "handlebars": "4.0.10",
     "html-entities": "^1.2.1",
+    "htmlparser": "^1.7.7",
     "json5": "^1.0.1",
     "live-server": "1.1.0",
     "lodash": "^4.17.10",
